<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home_24"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_exercise"
        android:icon="@drawable/ic_nav_exercise_24"
        android:title="@string/nav_exercise" />
    <item
        android:id="@+id/nav_ai"
        android:icon="@drawable/ic_nav_ai_24"
        android:title="@string/nav_ai" />
    <item
        android:id="@+id/nav_forum"
        android:icon="@drawable/ic_nav_forum_24"
        android:title="@string/nav_forum" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_nav_profile_24"
        android:title="@string/nav_profile" />
</menu>
